<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="@dimen/x500"
                android:layout_height="match_parent"
                android:background="#70000000"
                android:minWidth="@dimen/x500">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/x50"
        android:layout_marginTop="@dimen/x60"
        android:text="@string/qxd_str"
        android:textColor="@color/white"
        android:textSize="@dimen/x34"/>

    <TextView
        android:id="@+id/gaoqin_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/x160"
        android:padding="@dimen/x10"
        android:text="@string/gq_str"
        android:textColor="@color/white"
        android:textSize="@dimen/x34"/>

    <TextView
        android:id="@+id/biaoqin_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gaoqin_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/x60"
        android:padding="@dimen/x10"
        android:text="@string/bq_str"
        android:textColor="@color/white"
        android:textSize="@dimen/x34"/>
</RelativeLayout>