<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sostvcn.ui.BookContentActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/book_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/topToolBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y84"
        android:layout_alignParentTop="true"
        android:background="@color/white">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x30"
            android:padding="@dimen/x10"
            android:src="@mipmap/read_text_back" />

        <ImageView
            android:id="@+id/share_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/x30"
            android:padding="@dimen/x10"
            android:src="@mipmap/read_text_share" />

        <ImageView
            android:id="@+id/book_flag_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/share_view"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/x100"
            android:padding="@dimen/x10"
            android:src="@mipmap/read_text_bookmarker" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/y1"
            android:layout_alignParentBottom="true"
            android:background="@color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottomToolBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y104"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/y1"
            android:layout_alignParentTop="true"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/y15"
            android:layout_marginTop="@dimen/y22"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/catal_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/catalogueStr"
                android:textColor="@drawable/book_menubtn_txet_selector"
                android:textSize="@dimen/x25" />

            <TextView
                android:id="@+id/process_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/jdStr"
                android:textColor="#7F7F7F"
                android:textSize="@dimen/x25" />

            <TextView
                android:id="@+id/setting_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/settingStr"
                android:textColor="@drawable/book_menubtn_txet_selector"
                android:textSize="@dimen/x25" />

            <TextView
                android:id="@+id/model_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/nightStr"
                android:textColor="@drawable/book_menubtn_txet_selector"
                android:textSize="@dimen/x25" />

        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>
